# clearpath_common

clearpath_common/: package.xml
clearpath_control/: CMakeLists.txt
clearpath_control/config/: twist_mux.yaml
clearpath_control/config/a200/: control.yaml  teleop_xbox.yaml
clearpath_control/launch/: control.launch.py  teleop_base.launch.py  teleop_joy.launch.py
clearpath_generator_common/clearpath_generator_common/: common.py
clearpath_generator_common/clearpath_generator_common/description/: generate_description  generator.py  sensors.py
clearpath_generator_common/clearpath_generator_common/launch/: __init__.py  generator.py  writer.py
clearpath_generator_common/clearpath_generator_common/package/: writer.py
clearpath_generator_common/clearpath_generator_common/param/: generator.py  manipulators.py  platform.py  writer.py
clearpath_generator_common/clearpath_generator_common/semantic_description/: generate_semantic_description  generator.py
clearpath_platform/launch/: platform.launch.py
clearpath_platform_description/launch/: description.launch.py
clearpath_platform_description/urdf/: common.urdf.xacro
clearpath_platform_description/urdf/a200/: a200.urdf.xacro
clearpath_platform_description/urdf/generic/: gazebo.urdf.xacro
clearpath_sensors_description/: package.xml
