<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clearpath_common</name>
  <description>Metapackages containing common features of Clearpath Simulator</description>
  <!-- Gazebo harmonic version maintained by -->
  <maintainer email="azmyin12@gmail.com">Azmyin Md. Kamal</maintainer>

  <!-- Original version by -->
  <maintainer email="lcamero@clearpathrobotics.com">Luis Camero</maintainer>
  <maintainer email="rkreinin@clearpathrobotics.com">Roni Kreinin</maintainer>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>clearpath_control</exec_depend>
  <exec_depend>clearpath_description</exec_depend>
  <exec_depend>clearpath_generator_common</exec_depend>
  <exec_depend>clearpath_platform</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
